src/pages/pokemon-details/index.scss
@use './../../components/shared/global.scss' as global;

#pokemon-details {
  width: 1200px;
  margin: 0 auto;

  display: flex;
  flex-direction: column;
  gap: 8px;

  .pokemon {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    gap: 8px;

    width: 100%;
    height: 728px;

    > div {
      border-radius: 5px;
    }

    .poke-profile {
      width: 35%;

      &--skeleton {
        width: 35%;
      }
    }

    &__info {
      display: flex;
      flex-direction: column;
      gap: 18px;

      width: 65%;
      padding: 12px 24px;
      overflow-y: scroll;
      background-color: var(--primary-color);

      > div {
        display: flex;
        flex-direction: column;
        gap: 8px;

      }
    }
  }

  .pokemon__metadata {
    display: grid;
    grid-template-columns: 916px auto;
    gap: 8px;

    &__info {
      &__body {
        display: grid;
        gap: 8px;

        > div {
          box-sizing: border-box;
        }
      }
    }

    &__items {
      width: 100%;
      display: flex;
      flex-direction: column;
      gap: 18px;
      padding: 12px 24px;
      background-color: var(--primary-color);
      border-radius: 5px;
    }

    &__details {
      width: 100%;
      height: 100%;
      display: flex;
      flex-direction: column;
      gap: 18px;
      box-sizing: border-box;
      border-radius: 5px;
    }
  }
}


@media (min-width: 320px) and (max-width: 1200px) {
  #pokemon-details {
    position: relative;
    width: 100% !important;

    flex-direction: column;
    box-sizing: border-box;

    > div {
      border-radius: 0;
    }

    .pokemon {
      flex-direction: column;
      height: 100%;
      box-sizing: border-box;

      > div {
        border-radius: 0;
      }

      .poke-profile {
        width: 100%;

        &--skeleton {
          width: 100%;
          height: 440px;
        }
      }

      &__info {
        width: 100%;
        padding: 16px 12px;
        box-sizing: border-box;

        overflow-y: auto;
      }
    }

    .pokemon__metadata {
      display: flex;
      flex-direction: column;
      padding: 0;
      gap: 8px;

      &__column {
        width: 100%;

        > div {
          border-radius: 0;
        }
      }

      &__info {
        width: 100%;
        padding: 0;
        box-sizing: border-box;

        &__body {
          > div {
            box-sizing: border-box;
          }

          .poke-varieties {
            padding: 0;

            > div {
              border-radius: 0;
            }

            &__body {
              grid-template-columns: repeat(auto-fit, minmax(292.6px, auto));
            }

            .variety {
              width: 100%;
              border-radius: 0;
            }
          }
        }
      }

      &__items {
        padding: 16px 12px;
        overflow-x: scroll;
        box-sizing: border-box;
        border-radius: 0;
      }

      &__details {
        width: 100%;
        position: flex;
        border-radius: 0;

        .pokemon-shape, .pokemon-shape--skeleton {
          border-radius: 0;
          border-left: none;
          border-right: none;

          &__head, &__row {
            padding: 16px 12px;
          }
        }
      }
    }
  }
}

